# shitpost-machine

./: README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml  python-app.yml
src/: factory.py  main.py  poster.py
src/core/: appdata.py  config.py  exceptions.py  logger.py  utility.py
src/wrappers/: reddit.py  tg.py  vk.py
tests/: conftest.py  test_general.py
