[project]
name = "shitpost-machine"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "praw>=7.8.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "telethon>=1.42.0",
    "vk-api>=11.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
start = "src.main:main"

[dependency-groups]
dev = [
    "basedpyright>=1.36.2",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[tool.basedpyright]
include = ["src"]
exclude = ["**/__pycache__"]

typeCheckingMode = "recommended"
reportAny = "none"
reportExplicitAny = "none"
reportIgnoreCommentWithoutRule = false
